# free-chat

./: .gitignore  README.md
free-chat-client/: package-lock.json  package.json
free-chat-client/src/: style.css
free-chat-client/src-tauri/: Cargo.toml  tauri.conf.json
free-chat-server/: Cargo.toml  todo.md
free-chat-server/src/: database.rs  main.rs  server.rs
test-client/: Cargo.toml
test-client/src/: main.rs
